# NBody-Final-Project-main

./: CMakeLists.txt  README.md  install_sfml.sh  main.cpp
include/: Body.h  GpuComputation.h  NBody.h  SFML.h
opencl/: NBody.cl
src/: Body.cpp  GpuComputation.cpp  NBody.cpp  SFML.cpp
